--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,7 @@
 <a routerLink="SelectbyId">select by ID</a>
 <br />
 <a routerLink="Insert">Insert</a>
+<br />
+<a routerLink="update">update and delete</a>
+
+<router-outlet></router-outlet>
